CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(FindFasterPath LANGUAGES CXX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -std=c++20")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O2")

option(BUILD_DOC "Build documentation" ON)

FILE(GLOB srcs src/*.cpp)

FIND_PACKAGE(Curses REQUIRED)
INCLUDE_DIRECTORIES(${CURSES_INCLUDE_DIR})

FIND_PACKAGE( Boost COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

IF(BUILD_DOC)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/docs)
ENDIF()

ADD_EXECUTABLE(main ${srcs})
TARGET_LINK_LIBRARIES(main ${CURSES_LIBRARY} ${Boost_LIBRARIES})
